ci: jarvis env build hermes

--- a/.github/workflows/iowarp-setup.yml
+++ b/.github/workflows/iowarp-setup.yml
@@ -77,6 +77,7 @@ jobs:
           jarvis rg build
           sleep 5
           jarvis env build jarvis_wrp_cae
+          jarvis env build hermes
           find ${IOWARP} -name '*.yaml'
           find ${HOME}/.jarvis
           find ${HOME}/.scspkg
