ci: soft link and fix typo

--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -40,7 +40,7 @@ jobs:
         spack load py-pytest
         spack load py-pip
         spack load py-pytest-mpi
-        cd h5py/bechmarks        
+        cd h5py/benchmarks        
         python bechmark_slicing.py
 #        python -c "import h5py; h5py.run_tests(); print(h5py.version.info);"
 
