--- a/.github/workflows/mac-15_port.yml
+++ b/.github/workflows/mac-15_port.yml
@@ -26,3 +26,12 @@ jobs:
           export PATH=/opt/local/bin:/opt/local/sbin:$PATH          
           port version
           sudo port install mpich-clang
+          sudo port select --set mpi mpich-clang-fortran
+          git clone https://github.com/HDFGroup/hdf5
+          cd hdf5
+          mkdir build
+          cd build
+          cmake -DCMAKE_C_COMPILER=mpicc -DCMAKE_Fortran_COMPILER=mpiifort \
+            -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON ..
+          ctest -T Build
+          ctest -C Release -T Test
