--- a/.github/workflows/mac-15_xcode.yml
+++ b/.github/workflows/mac-15_xcode.yml
@@ -1,4 +1,4 @@
-name: mac-15 xcode
+name: mac-15 xcode sz zl
 
 on:
   workflow_dispatch:
@@ -22,8 +22,10 @@ jobs:
           mkdir build
           cd build
           cmake -G Xcode \
-          -DBUILDNAME:STRING="xcode/r" \
+          -DBUILDNAME:STRING="xcode/r/sz/zl" \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
+          -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON \
           -DSITE:STRING="mac-15" \
           ..
           ctest -C Release -D Experimental
