--- a/.github/workflows/nvhpc-25.7.yml
+++ b/.github/workflows/nvhpc-25.7.yml
@@ -33,10 +33,10 @@ jobs:
           mkdir build
           cd build
           cmake \
-            -DBUILDNAME="hk/nvhpc-25.7/nvc/nvfortran" \
+            -DBUILDNAME="hk/nvhpc-25.7" \
             -DCMAKE_BUILD_TYPE=Release \
             -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
-            -DHDF5_BUILD_FORTRAN:BOOL=ON \
+            -DHDF5_BUILD_FORTRAN:BOOL=OFF \
             -DHDF5_BUILD_JAVA:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
