--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -21,8 +21,8 @@ jobs:
       - name: test
         run: |
           export FC=/opt/homebrew/bin/flang-21
-          export CC=/opt/homebrew/bin/clang
-          export LDFLAGS="-L/opt/llvm/lib/c++ -Wl,-rpath"
+          export CC=/opt/homebrew/opt/llvm/bin/clang
+          export LDFLAGS="-L/opt/homebrew/opt/llvm/lib -Wl,-rpath"
           mkdir build
           cd build
           cmake -G Ninja \
