--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -21,8 +21,8 @@ jobs:
       - name: test
         run: |
           export FC=/opt/homebrew/bin/flang-21
-          export CC=/opt/homebrew/opt/llvm/bin/clang
-          export LDFLAGS="-L/opt/homebrew/opt/llvm/lib -Wl,-rpath"
+          export CC=/opt/homebrew/Cellar/llvm/21.1.1/bin/clang-21
+          export LDFLAGS="-L/opt/homebrew/Cellar/llvm/21.1.1/lib -Wl,-rpath"
           mkdir build
           cd build
           cmake -G Ninja \
@@ -33,6 +33,5 @@ jobs:
             -DHDF5_BUILD_FORTRAN=ON \
             -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=0 \
             -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=0 \
-            -DCMAKE_TOOLCHAIN_FILE=config/toolchain/clang.cmake \
             ..
 #          ctest -D Experimental
