--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -23,6 +23,7 @@ jobs:
           export FC=/opt/homebrew/bin/flang-21
           export CC=/opt/homebrew/Cellar/llvm/21.1.1/bin/clang-21
           export LDFLAGS="-L/opt/homebrew/Cellar/llvm/21.1.1/lib -Wl,-rpath"
+          export CFLAGS=-I/opt/homebrew/Cellar/llvm/21.1.1include
           mkdir build
           cd build
           cmake -G Ninja \
