--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -17,7 +17,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v5
         with:
-          repository: HDFGroup/hdf5
+          repository: hyoklee/hdf5
       - name: test
         run: |
 
