ci: disable fortran

--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -33,7 +33,7 @@ jobs:
             -DBUILDNAME:STRING=fl \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=0 \
             -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=0 \
             ..
