--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -2,7 +2,7 @@ name: mac-15 flang
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   build:
@@ -34,7 +34,7 @@ jobs:
             -DBUILDNAME:STRING="xcode/clang-21/flang-21" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=OFF \
+            -DHDF5_BUILD_FORTRAN=ON \
             -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=0 \
             -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=0 \
             ..
