--- a/.github/workflows/deb-13.yml
+++ b/.github/workflows/deb-13.yml
@@ -29,6 +29,7 @@ jobs:
         mkdir build
         cd build
         cmake \
+        -DMPIEXEC_PREFLAGS="--allow-run-as-root" \
         -DCMAKE_CXX_COMPILER=mpicxx \
         -DCMAKE_C_COMPILER=mpicc \
         -DCMAKE_Fortran_COMPILER=mpifort \
