--- a/.github/workflows/mac15-fl.yml
+++ b/.github/workflows/mac15-fl.yml
@@ -34,10 +34,10 @@ jobs:
             -DCMAKE_Fortran_COMPILER=/opt/homebrew/bin/flang-21 \
             -DCMAKE_OSX_SYSROOT=$(xcrun --show-sdk-path) \
             -DSITE:STRING=mac-15 \
-            -DBUILDNAME:STRING="xcode/clang-21/flang-21" \
+            -DBUILDNAME:STRING="xcode/clang-21" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DH5_FORTRAN_HAVE_C_LONG_DOUBLE=0 \
             -DH5_FORTRAN_C_LONG_DOUBLE_IS_UNIQUE=0 \
             ..
