--- a/.github/workflows/mac-26.yml
+++ b/.github/workflows/mac-26.yml
@@ -14,14 +14,15 @@ jobs:
         with:
           repository: HDFGroup/hdf5
       - name: install
-        run: brew install libaec
+        run: brew install libaec gfortran
       - name: test
         run: |
           mkdir build
           cd build
           cmake \
-          -DBUILDNAME:STRING=sz/zl \
+          -DBUILDNAME:STRING=f/sz/zl \
           -DCTEST_DROP_SITE_INIT:STRING=my.cdash.org \
+          -DHDF5_BUILD_FORTRAN:BOOL=ON \
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
           -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON \
           -DSITE:STRING=mac-26 \
