ci: ls /opt/brew/bin

--- a/.github/workflows/mac-26.yml
+++ b/.github/workflows/mac-26.yml
@@ -17,7 +17,7 @@ jobs:
         run: brew install libaec
       - name: test
         run: |
-          locate gfortran
+          ls /opt/homebrew/bin/
           mkdir build
           cd build
           cmake \
