--- a/.github/workflows/mac-26.yml
+++ b/.github/workflows/mac-26.yml
@@ -1,4 +1,4 @@
-name: mac-26 sz zl
+name: mac-26 f j sz zl
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: mac-26 sz zl
+    name: mac-26 f j sz zl
     runs-on: macos-26
     steps:
       - uses: actions/checkout@v4
@@ -20,12 +20,13 @@ jobs:
           mkdir build
           cd build
           cmake \
-          -DBUILDNAME:STRING=f/sz/zl \
+          -DBUILDNAME:STRING=f/j/sz/zl \
           -DCMAKE_Fortran_COMPILER=/opt/homebrew/bin/gfortran-15 \
-          -DCTEST_DROP_SITE_INIT:STRING=my.cdash.org \
-          -DHDF5_BUILD_FORTRAN:BOOL=ON \
-          -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON \
-          -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=ON \
+          -DCTEST_DROP_SITE_INIT=my.cdash.org \
+          -DHDF5_BUILD_FORTRAN=ON \
+          -DHDF5_BUILD_JAVA=ON
+          -DHDF5_ENABLE_SZIP_SUPPORT=ON \
+          -DHDF5_ENABLE_ZLIB_SUPPORT=ON \
           -DSITE:STRING=mac-26 \
           ..
           ctest -C Release -D Experimental
