--- a/.github/workflows/wsl-deb.yml
+++ b/.github/workflows/wsl-deb.yml
@@ -3,7 +3,7 @@ name: wsl deb
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     strategy:
@@ -11,10 +11,13 @@ jobs:
         os: [Debian]
     defaults:
       run:
-        shell: wsl-bash {0}        
+        shell: wsl-bash {0}
     runs-on: windows-latest
     steps:
-      - uses: Vampire/setup-wsl@v3
+      - uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5
+      - uses: Vampire/setup-wsl@v6
         with:
           distribution: ${{ matrix.os }}
           additional-packages:
@@ -25,10 +28,9 @@ jobs:
             ca-certificates
       - name: test
         run: |
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-          tar zxf snapshot-1.14.5.tar.gz
-          cd hdf5-1.14.5-2        
           mkdir build
           cd build
-          cmake -DSITE:STRING="deb" -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="deb/WSL" -DBUILDNAME:STRING="r" \
+          -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
