--- a/.github/workflows/wsl-kali.yml
+++ b/.github/workflows/wsl-kali.yml
@@ -21,7 +21,9 @@ jobs:
       - uses: Vampire/setup-wsl@v6
         with:
           distribution: ${{ matrix.os }}
-          update: 'true'
+          update: true
+          use-cache: true
+          set-as-default: true
           additional-packages:
             dos2unix
             cmake
